<resources>
    <string name="app_name">InventoryApp</string>
    <string name="txtLoginButton">Login Now</string>
    <string name="hintUserName">User Name</string>
    <string name="hintPassword">Password</string>
    <string name="txtLogo">Inventory</string>
    <string name="UserVerifyLink">https://172.30.54.85/Users/AppVerify</string>
    <string name="StartActLetsGetStarted">Let\'s get Started</string>
    <string name="MenuActOutboundBtnTxt">OutBound</string>
    <string name="MenuActInboundBtnTxt">InBound</string>
    <string name="MenuActCenterDisplayTxt">Choose The Activity To be Performed</string>
    <string name="MenuActGenReportBtnTxt">Generate Report</string>
    <string name="MenuActUserNameTxt">TextView</string>
    <string name="MenuActArrowTxt">Back</string>
    <string name="InboundActHeadingTxt">Inbound</string>
    <string name="InboundActSearchBoxHint">Enter the Item Code or scan</string>
    <string-array name="Indentor">
        <item>Tejas Shirgaonkar</item>
        <item>Majeed</item>
        <item>Bhuvan</item>
        <item>Faisal</item>
    </string-array>
    <string name="UserIndentorListLink">https://172.30.54.85/Users/getIndentorList</string>
    <string name="DepartmentListLink">https://172.30.54.85/Departments/getDepartmentList</string>

</resources>